Making the README.md file a generic one. It contains details of both the gradle commands that it supports.